booking page end

--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -33,3 +33,6 @@
 .react-calendar__tile--now {
   border-radius: 50px;
 }
+.react-calendar__navigation button:enabled:hover {
+  background-color: white;
+}
